# aerial-semantic-3d-map

./: .gitignore  .select_images.py.un~  .viewer.py.un~  bfs_expand.cpp  build_bfs.sh  config.yaml  constructor.py  filler.py  hole_filling.py  main.py  pyproject.toml  sam2_script.py  sam3_script.py  segmentation_lift.py  segmenter.py  select_images.py  select_images.py~  semantic_seg3d.py  viewer.py  viewer.py~
example_scripts/: sam3_script.py  vggt_script.py
