[project]
name = "clustering"
version = "0.1.0"
description = "3D point cloud semantic segmentation using OpenCLIP + VGGT"
requires-python = ">=3.10"
dependencies = [
    "open-clip-torch>=2.29.0",
    "torch>=2.0",
    "torchvision",
    "numpy<2",
    "Pillow",
    "tqdm",
    "vggt",
]

[tool.uv.sources]
vggt = { path = "../VGGT", editable = true }
